grammar.js
    nu_script: $ => seq(optional($.shebang), optional($._block_body)),

    _block_body: $ =>
      general_body_rules(
        '',
        $._block_body_statement,
        $._terminator,
        null,
        null,
        $._terminator,
      ),

    /// Identifiers
    // NOTE:
    // probably needs an external scanner for cmd_identifier
    // to behave exactly the same as the nushell parser
    cmd_identifier: $ => {
      const excluded = '\\[\\]\\{}<>="`\':,';
      const pattern_repeat = repeat(none_of(excluded));
      const pattern_suffix = token.immediate(repeat1(none_of(excluded)));
      return choice(
        token(
          prec(
            prec_map().low,
            seq(none_of(excluded + '^@#$\\-'), pattern_repeat),
          ),
        ),
        ...Object.values(keyword()).map((x) =>
          seq(alias(x, '_prefix'), pattern_suffix),
        ),
        ...Object.values(modifier()).map((x) =>
          seq(alias(x, '_prefix'), pattern_suffix),
        ),
        ...Object.values(special()).map((x) =>
          seq(alias(x, '_prefix'), pattern_suffix),
        ),
        seq(
          $._val_number_decimal,
          optional(
            choice(
              alias($.duration_unit, '_unit'),
              alias($.filesize_unit, '_unit'),
            ),
          ),
          // conflict with expr_binary
          optional(choice(...table().map((x) => token.immediate(x[1])))),
          token.immediate(prec(prec_map().low, pattern_repeat)),
        ),
      );
    },
    identifier: _ => _identifier_rules(false),

    _command_name: $ =>
      choice(
        field('unquoted_name', $.cmd_identifier),
        field('quoted_name', $.val_string),
      ),

    _variable_name: $ =>
      choice(
        field('var_name', $.identifier),
        field('dollar_name', $.val_variable),
      ),

    // remove newline characters from extras to reduce ambiguity
    // manually controlled by adding the following to parenthesized rules
    _newline: _ => /\r?\n/,
    _repeat_newline: $ => repeat1($._newline),
    _space: _ => /[ \t]+/,
    _separator: $ => choice($._space, $._newline),
    _pipe_separator: $ =>
      repeat1(seq(optional($._repeat_newline), choice('|', ...redir_pipe()))),

    /// Attributes
    parameter_pipes: $ =>
      seq('|', optional($._repeat_newline), repeat($.parameter), '|'),

    parameter: $ =>
      seq(
        choice(
          $._param_name,
          seq(
            field('param_long_flag', $.param_long_flag),
            field('flag_capsule', optional($.flag_capsule)),
          ),
        ),
        repeat(choice($.param_type, $.param_value)),
        repeat(choice($._newline, ',')),
      ),

    _param_name: $ =>
      choice(
        field('param_rest', $.param_rest),
        field('param_optional', $.param_opt),
        field('param_name', seq(optional('$'), $.identifier)),
        field('param_short_flag', $.param_short_flag),
      ),

    _ctrl_statement: $ => choice($.ctrl_for, $.ctrl_loop, $.ctrl_while),

    // control expressions *return values and can be used in pipelines
    //
    // * `break` and `continue` do not return values (yet?) but can be
    // used in pipelines
    _ctrl_expression: $ => choice($.ctrl_if, $.ctrl_try, $.ctrl_match),

    _stmt_let_shortcut: $ => prec.left(
      seq(
        keyword().let,
        field('name', $._variable_name),
        field('type', optional($.param_type)),
      ),
    ),

    /// Pipelines

    pipe_element: $ =>
      choice(
        seq(
          _env_variable_rule(false, $),
          $._expression,
          optional($.redirection),
        ),
        seq(_env_variable_rule(false, $), $.command),
        $._ctrl_expression,
        $.row_condition_command,
        $.assignment,
        alias($._stmt_let_shortcut, $.stmt_let),
      ),

    _blosure: $ => choice($.block, $.val_closure),

    _row_condition_lhs: $ =>
      seq(alias($._row_condition_lhs_path_head, $.path), repeat($.path)),

    row_condition_command: _row_condition_command_rule(false),
    row_condition_command_parenthesized: _row_condition_command_rule(true),

    _binary_predicate: _binary_predicate_rule(false),
    _binary_predicate_parenthesized: _binary_predicate_rule(true),

    row_condition: $ =>
      choice(
        $.val_bool,
        $.val_variable,
        $.expr_unary,
        $.expr_parenthesized,
        ...predicate().map(([precedence, opr]) =>
          prec.left(
            precedence,
            seq(
              field(
                'lhs',
                choice(
                  $._row_condition_lhs,
                  $.val_variable,
                  $.expr_parenthesized,
                ),
              ),
              field('opr', opr),
              field(
                'rhs',
                choice(
                  $._value,
                  $.val_range,
                  $.expr_unary,
                  $.expr_parenthesized,
                  alias($.unquoted, $.val_string),
                  alias($._unquoted_with_expr, $.val_string),
                ),
              ),
            ),
          ),
        ),
      ),

    /// Expressions

    _expression: $ =>
      choice(
        $._value,
        $.expr_binary,
        $.expr_unary,
        $.val_range,
        $.expr_parenthesized,
      ),

    _expression_parenthesized: $ =>
      choice(
        $._value,
        $.expr_unary,
        $.val_range,
        $.expr_parenthesized,
        alias($.expr_binary_parenthesized, $.expr_binary),
      ),

    /// Composite Expressions

    expr_unary: $ => {
      const after_not = choice(
        $.val_bool,
        $.expr_parenthesized,
        $.val_variable,
        $.expr_unary,
      );

      return choice(
        // "not" should be followed by space
        // to distinguish from unquoted e.g. $foo == nothing
        seq(alias(token(seq(operator().not, /\s/)), operator().not), after_not),
        $._expr_unary_minus,
      );
    },

    _expr_unary_minus: $ =>
      seq(
        token(operator().minus),
        seq(
          // ensure the expression immediately follows the
          // opening paren
          token.immediate(brack().open_paren),
          $._block_body,
          brack().close_paren,
        ),
      ),

    expr_binary: _expr_binary_rule(false),
    expr_binary_parenthesized: _expr_binary_rule(true),

    _expr_binary_expression: $ =>
      choice(
        $._value,
        $.val_range,
        $.expr_binary,
        $.expr_unary,
        $.expr_parenthesized,
      ),

    _expr_binary_expression_parenthesized: $ =>
      choice(
        $._value,
        $.val_range,
        alias($.expr_binary_parenthesized, $.expr_binary),
        $.expr_unary,
        $.expr_parenthesized,
      ),

    expr_parenthesized: $ =>
      seq(
        brack().open_paren,
        optional($._parenthesized_body),
        brack().close_paren,
        optional($.cell_path),
      ),

    _expr_parenthesized_immediate: $ =>
      seq(
        token.immediate(brack().open_paren),
        optional($._parenthesized_body),
        brack().close_paren,
      ),

    _parenthesized_body: $ =>
      general_body_rules(
        '',
        $._block_body_statement_parenthesized,
        $._terminator,
        null,
        [
          repeat1(seq(optional($._repeat_newline), ';')),
          optional($._repeat_newline),
        ],
        $._terminator,
      ),

    val_range: _range_rule(false),
    _val_range: _range_rule(true),

    _immediate_decimal: _decimal_rule(true),

    /// Simple Expressions

    _value: $ =>
      choice(
        $.val_variable,
        $.val_cellpath,
        $.val_nothing,
        $.val_bool,
        $.val_number,
        $.val_duration,
        $.val_filesize,
        $.val_binary,
        $.val_string,
        $.val_interpolated,
        $.val_date,
        $.val_list,
        $.val_record,
        $.val_table,
        $.val_closure,
      ),

    /// Literals
    val_bool: _ => choice(special().true, special().false),

    val_variable: $ =>
      seq(
        '$',
        field('name', choice('nu', 'in', 'env', $.identifier)),
        optional($.cell_path),
      ),

    val_number: $ => $._val_number,

    _val_number_decimal: _decimal_rule(false),

    // separating floats from integers does not end well
    // especially when it comes to incorporation with ranges.
    _val_number: $ =>
      choice(
        $._val_number_decimal,
        /0x[0-9a-fA-F_]+/,
        /0b[01_]+/,
        /0o[0-7_]+/,
        special().pos_infinity,
        special().neg_infinity,
        special().not_a_number,
      ),

    val_filesize: $ =>
      choice(
        // "0b" as single terminal in both $.val_binary and $.val_number
        // not able to further split it into value and unit
        '0b',
        seq(
          field('value', alias($._val_number_decimal, $.val_number)),
          field('unit', $.filesize_unit),
        ),
      ),

    // prettier-ignore
    filesize_unit: _ => token.immediate(choice(
      'b', 'B',

      'kb', 'kB', 'Kb', 'KB',
      'mb', 'mB', 'Mb', 'MB',
      'gb', 'gB', 'Gb', 'GB',
      'tb', 'tB', 'Tb', 'TB',
      'pb', 'pB', 'Pb', 'PB',
      'eb', 'eB', 'Eb', 'EB',

      'kib', 'kiB', 'kIB', 'kIb', 'Kib', 'KIb', 'KIB',
      'mib', 'miB', 'mIB', 'mIb', 'Mib', 'MIb', 'MIB',
      'gib', 'giB', 'gIB', 'gIb', 'Gib', 'GIb', 'GIB',
      'tib', 'tiB', 'tIB', 'tIb', 'Tib', 'TIb', 'TIB',
      'pib', 'piB', 'pIB', 'pIb', 'Pib', 'PIb', 'PIB',
      'eib', 'eiB', 'eIB', 'eIb', 'Eib', 'EIb', 'EIB',
    )),

    // prettier-ignore
    _stringish: $ =>
      choice(
        $.val_string,
        $.val_interpolated,
        $.expr_parenthesized,
        $.val_variable,
      ),

    val_string: $ =>
      choice(
        $._str_double_quotes,
        $._str_single_quotes,
        $._str_back_ticks,
        $._raw_str,
      ),

    _raw_str: $ =>
      seq(
        $.raw_string_begin,
        alias($.raw_string_content, $.string_content),
        $.raw_string_end,
      ),

    string_content: $ =>
      repeat1(
        choice(
          $._escaped_str_content,
          // double quoted strings accept escapes
          $.escape_sequence,
        ),
      ),

    _str_double_quotes: $ => seq('"', optional($.string_content), '"'),

    _escaped_str_content: _ =>
      token.immediate(prec(prec_map().string, /[^"\\]+/)),

    _str_single_quotes: $ =>
      seq(
        '\'',
        alias(
          token.immediate(prec(prec_map().string, /[^']*/)),
          $.string_content,
        ),
        token.immediate('\''),
      ),

    _str_back_ticks: $ =>
      seq(
        '`',
        alias(
          token.immediate(prec(prec_map().string, /[^`]*/)),
          $.string_content,
        ),
        token.immediate('`'),
      ),

    val_list: $ =>
      seq(
        brack().open_brack,
        optional($.list_body),
        brack().close_brack,
        optional($.cell_path),
      ),

    _spread_listish: $ =>
      choice(
        alias($._spread_list, $.val_list),
        alias($._spread_variable, $.val_variable),
        alias($._spread_parenthesized, $.expr_parenthesized),
      ),

    list_body: $ =>
      general_body_rules(
        'entry',
        $.val_entry,
        $._entry_separator,
        $._newline,
        null,
        choice($._newline, ','),
      ),

    val_entry: $ =>
      prec(
        10,
        field(
          'item',
          choice(
            $._item_expression,
            field('spread', $._spread_listish),
            alias($._unquoted_in_list, $.val_string),
            alias($._unquoted_in_list_with_expr, $.val_string),
          ),
        ),
      ),

    _item_expression: $ =>
      choice($._value, $.val_range, $.expr_parenthesized),

    _entry_separator: _ => token(prec(prec_map().higher, choice(',', /\s/))),

    val_closure: $ =>
      seq(
        brack().open_brace,
        optional($._repeat_newline),
        optional(field('parameters', $.parameter_pipes)),
        optional($._block_body),
        brack().close_brace,
      ),

    /// CellPaths

    cell_path: $ => repeat1($.path),

    _path_suffix: _$ => choice('?', '!', seq('?', '!'), seq('!', '?')),

    path: $ => {
      const path = choice(
        token.immediate(prec(prec_map().low, repeat(none_of('\\[\\]{}.,:?!')))),
        $.val_string,
      );

      return seq('.', path, optional($._path_suffix));
    },

    /// Single-use env variables: FOO=BAR cmd

    _cmd_arg: $ =>
      choice(
        field('redir', prec.right(10, $.redirection)),
        field('flag', prec.right(9, $._flag)),
        field('arg', prec.right(8, $._value)),
        field('arg', prec.right(8, $.val_range)),
        field('arg', prec.right(7, $.expr_parenthesized)),
        field('arg_spread', $._spread_listish),
        // lowest precedence to make it a last resort
        field('arg_str', alias($.unquoted, $.val_string)),
        field('arg_str', alias($._unquoted_with_expr, $.val_string)),
      ),

    _unquoted_pattern: _ =>
      token.immediate(
        prec(
          prec_map().lowest,
          repeat1(none_of(_unquoted_pattern_rule('command', false))),
        ),
      ),
    _unquoted_pattern_in_list: _ =>
      token.immediate(
        prec(
          prec_map().lowest,
          repeat1(none_of(_unquoted_pattern_rule('list', false))),
        ),
      ),
    _unquoted_pattern_in_record: _ =>
      token.immediate(
        prec(
          prec_map().lowest,
          repeat1(none_of(_unquoted_pattern_rule('record', false))),
        ),
      ),

    _unquoted_anonymous_prefix: $ =>
      choice(
        special().null,
        alias($.val_bool, '_prefix'),
        alias($.val_date, '_prefix'),
        seq(
          $._val_number_decimal,
          choice(
            alias($.duration_unit, '_unit'),
            alias($.filesize_unit, '_unit'),
          ),
        ),
      ),

    /// Comments

    comment: _ => seq('#', /.*/),
  },
});

/**
 * @param {boolean} immediate
 */
function _identifier_rules(immediate) {
  const func = immediate ? token.immediate : token;
  const excluded = '\\[\\]\\-{}<>="`\'@?,:.';
  return func(seq(none_of(excluded + '&*!^+#$'), repeat(none_of(excluded))));
}

/**
 * for rules of repeated pattern that require separator in-between
 * e.g. list, record, blocks
 *
 * @param {string} field_name
 * @param {any} entry base build block
 * @param {any} separator separator between entries
 * @param {any} preceding separator before first entry, defaults to separator
 * @param {any} alt_sep array of rules to override default separator
 * @param {any} empty_unit optional for empty body
 */
function general_body_rules(
  field_name,
  entry,
  separator,
  preceding = null,
  alt_sep = null,
  empty_unit = null,
) {
  const field_entry = field_name.length == 0 ? entry : field(field_name, entry);
  const prec_sep = preceding || separator;
  // Normal entries MUST have a separator
  const sep_array = alt_sep || [repeat1(separator)];
  const rule = prec(
    prec_map().higher,
    seq(
      repeat(prec_sep),
      repeat(seq(field_entry, ...sep_array)),
      field_entry,
      // Final entry may or may not have separator
      repeat(separator),
    ),
  );
  return empty_unit ? choice(repeat1(empty_unit), rule) : rule;
}

/**
 *
 */
function parenthesized_body_rules() {
  return {
    ..._block_body_rules('_parenthesized'),

    /**
     * pipeline_parenthesized
     *
     * @param {GrammarSymbols<string>} $
     */
